# sse-demo

./: .gitignore  Makefile  README.md  docker-compose.yml
backend/: .dockerignore  Dockerfile  README.md  alembic.ini  pyproject.toml
backend/app/: database.py  events.py  main.py  models.py  worker.py
backend/app/routers/: jobs.py
backend/migrations/: env.py  script.py.mako
backend/migrations/versions/: 0001_baseline.py  0002_add_job_name.py
backend/tests/: conftest.py  test_jobs.py
docs/: architecture-c4.html
frontend/: .dockerignore  Dockerfile  index.html  nginx.conf  package.json  pnpm-lock.yaml  tsconfig.tsbuildinfo  vite.config.ts
frontend/src/: App.tsx  api.ts  index.css  types.ts  useJobs.ts
frontend/src/components/: JobRow.test.tsx  JobRow.tsx  StateBadge.test.tsx  StateBadge.tsx
