[project]
name = "sse-state-demo-backend"
version = "0.1.0"
description = "FastAPI SSE state-machine demo backend"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.139.0",
    "uvicorn[standard]>=0.32.0",
    "sqlmodel>=0.0.22",
    "aiosqlite>=0.20.0",
    "greenlet>=3.1.0",
    "alembic>=1.14.0",
]

[dependency-groups]
dev = [
    "ty>=0.0.1a1",
    "ruff>=0.8.0",
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
    "asgi-lifespan>=2.1.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["app"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4", "SIM", "ASYNC"]
# B008: Depends() in argument defaults is the idiomatic FastAPI pattern.
ignore = ["B008"]

[tool.ty.environment]
python-version = "3.12"

[tool.pytest.ini_options]
asyncio_mode = "auto"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
